--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
+about-time==4.2.1
+alive-progress==3.1.4
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
+geographiclib==2.0
+geopy==2.4.0
+grapheme==0.6.0
+idna==3.4
+lxml==4.9.3
 numpy==1.26.0
 packaging==23.1
 pandas==2.1.0
 plotly==5.17.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
+soupsieve==2.5
 tenacity==8.2.3
 tzdata==2023.3
+urllib3==2.0.6
